--- a/NFTB.Mobile/NFTB.Mobile/UI/Pages/AttendanceEditor.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Pages/AttendanceEditor.xaml
@@ -7,44 +7,62 @@
              x:Class="NFTB.Mobile.UI.Pages.AttendanceEditor">
 
     <StackLayout Style="{StaticResource main}">
-        <Grid VerticalOptions="FillAndExpand">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="10*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Label Text="Title Here mate" Grid.Row="0"></Label>
+        <Grid Style="{StaticResource filter}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="10*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
 
-            <ListView ItemsSource="{Binding PlayerList}" HasUnevenRows="True" Grid.Row="1">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.ContextActions>
-                                <MenuItem  CommandParameter="{Binding .}" Text="Edit" />
-                                <MenuItem  CommandParameter="{Binding .}" Text="Delete" />
-                            </ViewCell.ContextActions>
-                            <StackLayout Style="{StaticResource listViewItem}">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*"></RowDefinition>
-                                        <RowDefinition Height="*"></RowDefinition>
+            <!--<Picker x:Name="PlayerListFilter" ItemsSource="{Binding TestList}" IsVisible="False">
 
-                                    </Grid.RowDefinitions>
+            </Picker>-->
 
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="5*"></ColumnDefinition>
-                                        <ColumnDefinition Width="*"></ColumnDefinition>
-                                    </Grid.ColumnDefinitions>
+            <Label Text="Filter was there a thing in the majigy yoza hey hey" HorizontalOptions="Center" Grid.Column="1"></Label>
 
-                                    <Label Style="{StaticResource H1}" Text="{Binding FirstName}" Grid.Column="0" Grid.Row="0"></Label>
-                                    <Label Text="Hey" Grid.Column="0" Grid.Row="1"></Label>
-                                </Grid>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <Image Source="icon.png" HorizontalOptions="End" Grid.Column="2">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding OnFilterTapped}">
+
+                    </TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
+            
         </Grid>
-        <Button Text="Test" Command="{Binding OnPop}"></Button>
-  </StackLayout>
+
+        <ListView ItemsSource="{Binding PlayerAttendances}" HasUnevenRows="False" Grid.Row="0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <!--<ViewCell.ContextActions>
+                            <MenuItem Command="{Binding Path=BindingContext.OnEditPlayer, Source={x:Reference PlayerListView}}" CommandParameter="{Binding .}" Text="Edit" />
+                            <MenuItem  Command="{Binding Path=BindingContext.OnDeletePlayer, Source={x:Reference PlayerListView}}" CommandParameter="{Binding .}" Text="Delete" />
+
+                        </ViewCell.ContextActions>-->
+                        <StackLayout Style="{StaticResource list-view-item}">
+                            <!--<Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                    <RowDefinition Height="*"></RowDefinition>
+
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+
+                            </Grid>-->
+
+                            <Label Style="{StaticResource h1}" Text="{Binding PlayerName}" Grid.Column="0" Grid.Row="0"></Label>
+                            <Label Text="Hey" Grid.Column="0" Grid.Row="1"></Label>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+
+    </StackLayout>
   
 </ContentPage>
