--- a/NFTB.Mobile/NFTB.Mobile/UI/Navigation/NavigationMenu.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Navigation/NavigationMenu.xaml
@@ -4,7 +4,7 @@
                   xmlns:contentPages="clr-namespace:NFTB.Mobile.UI.Pages"
                   x:Class="NFTB.Mobile.UI.Navigation.NavigationMenu"
                   Title="Navigation"
-                  BackgroundColor="{Binding mainColor}">
+                  BackgroundColor="{Binding main-color}">
     
     <!--I need to check what it looks like on an android phone first before implementing this-->
     <!--<StackLayout Grid.Row="0" Orientation="Horizontal" BackgroundColor="White" Padding="10">
@@ -21,5 +21,4 @@
         </Grid>
 
     </StackLayout>-->
-
 </NavigationPage>
